kubernetes/staging-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oakell-staging-be
  namespace: oakell-staging
  labels:
    app: oakell
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oakell
  template:
    metadata:
      labels:
        app: oakell
    spec:
      containers:
        - name: oakell-staging
          image: 471112673244.dkr.ecr.af-south-1.amazonaws.com/oakell-staging:latest
          ports:
            - containerPort: 443
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /health
              port: 8443
            initialDelaySeconds: 10
            periodSeconds: 10
      imagePullSecrets:
        - name: ecr-secret
