kubernetes/staging-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oakell-staging-ingress
  namespace: oakell-staging
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:af-south-1:471112673244:certificate/6626c8dc-f193-4bc0-ac45-d41cb7c25d92
spec:
  rules:
  - host: api.staging.oakell.com
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: oakell-service
            port:
              number: 443

  tls:
  - hosts:
    - api.staging.oakell.com
    secretName: oakell-tls-secret
